--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ input[type="number"] {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  transition: all 300ms ease;
+  transition: all 300ms;
   position: absolute;
   z-index: 2;
 }
